--- a/client/public/index.html
+++ b/client/public/index.html
@@ -28,6 +28,10 @@
       href="https://fonts.googleapis.com/css?family=Dancing+Script|Lato&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css?family=Rubik&display=swap"
+      rel="stylesheet"
+    />
     <script
       src="https://kit.fontawesome.com/76692beadf.js"
       crossorigin="anonymous"
